--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "amqplib": "^0.8.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "nats": "^2.6.1"
+    "lodash": "^4.17.21",
+    "nats": "^2.6.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "jest": "^27.5.1"
