--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "lodash": "^4.17.21",
+    "mongodb": "^4.6.0",
     "nats": "^2.6.1",
     "uuid": "^8.3.2"
   },
